--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,16 @@
-.idea/
+.idea
+.idea/gri.iml
+.idea/misc.xml
+.idea/modules.xml
+.idea/vcs.xml
+.idea/workspace.xml
+
 /.idea/
+/.idea/gri.iml
+/.idea/workspace.xml
+/.idea/vcs.xml
+/.idea/modules.xml
+/.idea/misc.xml
 db.*
 
 
